--- a/src/css/loggedin-header.css
+++ b/src/css/loggedin-header.css
@@ -5,7 +5,7 @@
     right: 0;
     left: 0;
     width:100%;
-    z-index: 9999999999999999;
+    z-index: 9999;
 }
 .loggedin-header-wrapper__content{
     display: flex;
